# indiaruns-ranker

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  codexmohan_6487.csv  codexmohan_6487.gridsearch.csv  pyproject.toml  requirements.txt  submission_metadata.yaml
.github/workflows/: ci.yml
artifacts/: cand_embs.npy  features.jsonl  jd_emb.npy  manifest.json  tfidf.pkl
artifacts/models/cross-encoder_ms-marco-MiniLM-L-6-v2/: README.md  config.json  config_sentence_transformers.json  modules.json  sentence_bert_config.json
docs/: deck.html  deck.md
sandbox/: app.py
scripts/: benchmark_jsonl_parsers.py  build_pdf.py  download_models.py  grid_search.py
src/: __init__.py  config.py  config.py.original  features.py  honeypot.py  io.py  precompute.py  rank.py  reasoning.py  rerank.py  scoring.py  semantic.py  sparse.py
tests/: check_generalization.py  compare_rankings.py  test_generalization.py  test_sandbox_app.py  test_scoring.py  test_submission_and_artifacts.py  trace_pipeline.py  validate_proposals.py
