[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "talentlens"
version = "1.0.0"
description = "TalentLens candidate ranking system for the Redrob AI INDIA RUNS hackathon"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.optional-dependencies]
sandbox = ["gradio>=4.0"]
dev = ["pytest>=8.0", "pyarrow>=14.0"]

[tool.setuptools.packages.find]
include = ["src*"]
