[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talentlens"
version = "1.0.0"
description = "TalentLens candidate ranking system for the Redrob AI INDIA RUNS hackathon"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2.3",
    "pandas>=2.0,<2.3",
    "scikit-learn>=1.5,<1.6",
    "sentence-transformers==3.4.1",
    "transformers>=4.48,<4.49",
    "torch==2.5.1",
]

[project.optional-dependencies]
sandbox = ["gradio>=4.44,<5"]
dev = ["pytest>=8.0,<9", "pyarrow>=14.0,<19"]

[tool.setuptools.packages.find]
include = ["src*"]
