[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talentlens"
version = "1.0.0"
description = "TalentLens candidate ranking system for the Redrob AI INDIA RUNS hackathon"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2.3",
    "orjson>=3.10,<4",
    "pandas>=2.0,<2.3",
    "scikit-learn>=1.5,<1.6",
    "sentence-transformers==3.4.1",
    "transformers>=4.48,<4.49",
    "torch==2.5.1",
]

[project.optional-dependencies]
sandbox = [
    "gradio>=5,<6",
    "gradio-client>=1.4,<2",
    "fastapi>=0.112,<0.116",
    "pydantic>=2.8,<2.10",
]
cpu-accel = [
    "optimum[onnxruntime]>=2.1,<3",
    "onnxruntime>=1.20,<1.23",
    "onnx>=1.16,<2",
    "optimum[openvino]>=2.1,<3",
    "optimum-intel>=1.27,<2",
    "openvino>=2026.2,<2027",
    "datasets>=4,<6",
]
dev = ["pytest>=8.0,<9", "pyarrow>=14.0,<19"]

[tool.setuptools.packages.find]
include = ["src*"]
